<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Tr_Retrieve">-->

    <TextView
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:text="&#8942;"
        android:textSize="20sp"
        android:id="@+id/txt_option"
        android:gravity="right"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_gravity="right">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_name"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_amount"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/currencyTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_currency"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_type"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/groupTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_group"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tr_date"
                android:textSize="10sp" />

            <!-- Add TextViews for other fields (if needed) -->

        </LinearLayout>

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
</androidx.cardview.widget.CardView>