<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tr_Update"
    android:padding="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginEnd="320dp"
        android:src="@drawable/home"
        android:onClick="home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tr_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tr_amount"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_amount"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tr_date"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_date"/>

    <Spinner
        android:id="@+id/currencySpinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="@id/edit_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_tr_name" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edit_date"
        app:layout_constraintStart_toStartOf="@id/edit_date" />


    <Spinner
        android:id="@+id/groupSpinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/edit_date"
        app:layout_constraintEnd_toEndOf="@id/edit_date"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:textColor="@color/black"
        android:text="@string/tr_btn_update"
        android:onClick="update_Tr"/>

</LinearLayout>